added a new seminar example and changed the blog directory?

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ icon: favi.png  # the emoji used as the favicon (alternatively, provide image na
 
 url: https://dginsberg.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
-last_updated: false # set to true if you want to display last updated in the footer
+last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
 # -----------------------------------------------------------------------------
@@ -123,14 +123,14 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 blog_name:  # blog_name will be displayed in your blog page
 blog_nav_title:  # your blog must have a title for it to be displayed in the nav bar
 blog_description: The Brooklyn College Mathematical Sciences Colloquium
-permalink: /blog/:year/:title/
+permalink: /colloquium/:year/:title/
 
 # Pagination
 pagination:
   enabled: true
 
 related_blog_posts:
-  enabled: true
+  enabled: false
   max_related: 5
 
 # Giscus comments (RECOMMENDED)
