--- a/_config.yml
+++ b/_config.yml
@@ -120,14 +120,14 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name:  # blog_name will be displayed in your blog page
+blog_name:  The Brooklyn College Mathematical Sciences Colloquium
 blog_nav_title:  # your blog must have a title for it to be displayed in the nav bar
-blog_description: The Brooklyn College Mathematical Sciences Colloquium
+blog_description: 
 permalink: /colloquium/:year/:title/
 
 # Pagination
 pagination:
-  enabled: true
+  enabled: false #not sure if I want this?
 
 related_blog_posts:
   enabled: false
