--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 blog_name:  The Brooklyn College Mathematical Sciences Colloquium
 blog_nav_title:  # your blog must have a title for it to be displayed in the nav bar
 blog_description: 
-permalink: /bcmsc/:year/:title/
+permalink: /blog/:year/:title/
 
 # Pagination
 pagination:
@@ -173,10 +173,10 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
-  colloquiumtalks:
+  colloquia:
     layout: post
     output: true
-    permalink: /colloquium/:path/
+    permalink: /bcmsc/:path/
 
 announcements:
   enabled: true
