renamved bcmsc everywhere to colloquia to get the individual talk pages to hopefully generate

--- a/_config.yml
+++ b/_config.yml
@@ -175,7 +175,7 @@ collections:
     permalink: /projects/:path/
   colloquia:
     output: true
-    permalink: /bcmsc/:path/
+    permalink: /colloquia/:path/
 
 announcements:
   enabled: true
